# Disabled for now since it was ICEing
# cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["tetanes", "tetanes-core", "tetanes-utils"]

[workspace.package]
version = "0.13.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
readme = "README.md"
repository = "https://github.com/lukexor/tetanes.git"
homepage = "https://lukeworks.tech/tetanes"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"
print_literal = "warn"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[workspace.dependencies]
anyhow = "1.0"
bincode = { version = "2.0", default-features = false, features = [
  "std",
  "serde",
] }
cfg-if = "1.0"
clap = { version = "4.5", default-features = false, features = [
  "std",
  "help",
  "usage",
  "suggestions",
  "derive",
] }
dirs = "6.0"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
tetanes-core = { version = "0.13", path = "tetanes-core" }
thiserror = "2.0"
tracing = { version = "0.1", default-features = false, features = [
  "std",
  "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "std",
  "registry",
  "parking_lot",
] }
serde_json = "1.0"
web-time = "1.0"
# Locked to a non-API breaking change required for glow 0.16
web-sys = "=0.3.85"

[profile.dev]
# `debug = false` Saves both compile time and WASM download times
debug = false
# Playable framerates in development
opt-level = 1
# Higher opt-level for deps speeds up incremental compile times and can improve
# runtime performance
[profile.dev.package."*"]
opt-level = 3
[profile.dev.build-override]
opt-level = 3

# TODO: Would be nice to move lto to `dist` but Trunk doesn't support profiles yet
# See: https://github.com/trunk-rs/trunk/issues/605
#      https://github.com/trunk-rs/trunk/issues/933
[profile.release]
codegen-units = 1
lto = true
# See: https://smallcultfollowing.com/babysteps/blog/2024/05/02/unwind-considered-harmful/
panic = "abort"
strip = true

[profile.flamegraph]
inherits = "release"
lto = "off"
debug = true
strip = false

[profile.dist]
inherits = "release"

[workspace.metadata.wix]
upgrade-guid = "DB76CEB0-15B8-4727-9C3E-55819AB5E7B9"
path-guid = "5731AE63-80DE-4CD7-ADFA-9E79BEDCE08B"
license = false
eula = false
