[package]
name = "rustynes-web"
version = "0.1.0"
license = "GNU"
description = "NES Emulator written in Rust and WebAssembly"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
documentation = "https://github.com/lukexor/rustynes"
repository = "https://github.com/lukexor/rustynes.git"
homepage = "https://github.com/lukexor/rustynes"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustynes = { path = "../", default-features = false, features = ["wasm-driver"] }
wasm-bindgen = "0.2.51"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'Node',
    'Window',
]

[features]
default = ["console_error_panic_hook", ]

[profile.dev]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
