[package]
name = "tetanes-core"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "A NES Emulator written in Rust"
authors.workspace = true
readme = "README.md"
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["emulators"]
keywords = ["nes", "emulator"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "warn"
missing_const_for_fn = "warn"
print_literal = "warn"

[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[features]
default = ["cycle-accurate"]
profiling = ["dep:puffin"]
cycle-accurate = []

[dependencies]
bincode.workspace = true
bitflags = { version = "2.4", features = ["serde"] }
cfg-if.workspace = true
dirs.workspace = true
enum_dispatch = "0.3"
flate2 = "1.0"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
puffin = { workspace = true, features = ["web"], optional = true }
web-time.workspace = true
web-sys = { workspace = true, features = ["Storage", "Window"] }

[dev-dependencies]
anyhow.workspace = true
image.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "clock_frame"
harness = false
