[package]
name = "tetanes-core"
version.workspace = true
rust-version = "1.85.0"
edition.workspace = true
license.workspace = true
description = "A NES Emulator written in Rust"
authors.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
categories = ["emulators"]
keywords = ["nes", "emulator"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "clock_frame"
harness = false

[lints]
workspace = true

[features]
default = []
profiling = ["dep:puffin"]
trace = []

[dependencies]
bincode.workspace = true
bitflags = { version = "2.10", features = ["serde"] }
cfg-if.workspace = true
dirs.workspace = true
enum_dispatch = "0.3"
flate2 = "1.0"
rand = "0.9"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
puffin = { workspace = true, features = ["web"], optional = true }
serde_json.workspace = true
web-time.workspace = true
web-sys = { workspace = true, features = ["Storage", "Window"] }

[dev-dependencies]
anyhow.workspace = true
image.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Blocked upgrading until pprof upgrades criterion
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
