[package]
name = "tetanes-util"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "TetaNES utility library"
authors.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[features]
default = []
profiling = ["dep:puffin"]

[dependencies]
anyhow.workspace = true
flate2 = "1.0"
puffin = { workspace = true, optional = true }
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-time.workspace = true
