[package]
name = "tetanes-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "list_boards"
test = false
bench = false

[[bin]]
name = "generate_db"
test = false
bench = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
tetanes-core.workspace = true
