[package]
name = "tetanes-web"
version = "1.0.0"
license = "GPL-3.0-or-later"
description = "A NES Emulator written in Rust and WebAssembly"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
readme = "README.md"
documentation = "https://github.com/lukexor/tetanes/tree/master/tetanes-web"
repository = "https://github.com/lukexor/tetanes.git"
homepage = "https://lukeworks.tech/tetanes"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
console_log = "0.2"
log = "0.4"
tetanes = { path = "../", default-features = false, features = ["wasm-driver", "no-randomize-ram"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
