[package]
name = "tetanes-web"
version = "0.1.2"
license = "GPL-3.0-or-later"
description = "A NES Emulator written in Rust and WebAssembly"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
readme = "README.md"
documentation = "https://github.com/lukexor/tetanes/tree/master/tetanes-web"
repository = "https://github.com/lukexor/tetanes.git"
homepage = "https://lukeworks.tech/tetanes"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "^0.2"
log = "^0.4"
tetanes = "^0.7"
wasm-bindgen = "^0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3"
console_error_panic_hook = "^0.1"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
