[package]
name = "tetanes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A cross-platform NES Emulator written in Rust using wgpu"
authors.workspace = true
readme = "../README.md"
repository.workspace = true
homepage.workspace = true
categories = ["emulators", "wasm"]
keywords = ["nes", "emulator", "wasm"]
exclude = ["/bin"]
default-run = "tetanes"

[[bin]]
name = "tetanes"
test = false
bench = false

[[bin]]
name = "build_artifacts"
test = false
bench = false

[lints]
workspace = true

[features]
default = []
profiling = ["tetanes-core/profiling"]
# Until webgpu is stable on all platforms
webgpu = []

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytemuck = "1.15"
cfg-if.workspace = true
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
crossbeam = "0.8"
dirs.workspace = true
egui = { version = "0.33", default-features = false, features = [
  "bytemuck",
  "color-hex",
  "default_fonts",
  "persistence",
  "serde",
] }
egui_extras = { version = "0.33", default-features = false, features = [
  "image",
  "serde",
] }
gilrs = { version = "0.11", features = ["serde-serialize"] }
hound = "3.5"
image.workspace = true
parking_lot = "0.12"
profiling = { version = "1.0", default-features = false }
ringbuf = "0.4"
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.38"
tetanes-core.workspace = true
thingbuf = "0.1"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16", features = ["v4", "serde"] }
webbrowser = { version = "1.0", features = ["hardened", "disable-wsl"] }
wgpu = "28.0"
winit = { version = "0.30", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Blocked upgrading until egui upgrades accesskit
accesskit = "0.21"
# Blocked upgrading until accesskit can be upgraded
accesskit_winit = "0.29"
arboard = { version = "3.4", default-features = false, features = [
  "wayland-data-control",
  "windows-sys",
] }
clap.workspace = true
cpal = "0.17"
ctrlc = { version = "3.5", features = ["termination"] }
egui = { version = "0.33", default-features = false, features = ["accesskit"] }
pollster = "0.4"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "blocking",
] }
rfd = "0.17"
semver = "1"
sysinfo = { version = "0.38", default-features = false, features = [
  "system",
  "disk",
  "network",
] }
tracing-appender = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
  "wasmbind",
] }
console_error_panic_hook = "0.1"
cpal = { version = "0.17", features = ["wasm-bindgen"] }
# Required because of downstream dependencies: https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.4", features = ["wasm_js"] }
tracing-web = "0.1"
uuid = { version = "1.10", features = ["v4", "serde", "rng-getrandom"] }
wgpu = { version = "28.0", features = [
  "webgl",
  "fragile-send-sync-non-atomic-wasm", # Safe because we're not enabling atomics
] }
web-sys = { workspace = true, features = [
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Document",
  "DomTokenList",
  "Element",
  "File",
  "FileList",
  "FileReader",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlDivElement",
  "Navigator",
  "SpeechSynthesis",
  "SpeechSynthesisUtterance",
  "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
zip = { version = "8.0", default-features = false, features = ["deflate"] }

[package.metadata.deb]
extended-description = """
`TetaNES` is a cross-platform emulator for the Nintendo Entertainment System
(NES) released in Japan in 1983 and North America in 1986, written in
Rust using wgpu. It runs on Linux, macOS, Windows, and in a web browser
with Web Assembly.

It started as a personal curiosity that turned into a passion project. It is
still being actively developed with new features and improvements constantly
being added. It is a fairly accurate emulator that can play most NES titles.

`TetaNES` is also meant to showcase using Rust's performance, memory safety, and
fearless concurrency features in a large project. Features used in this project
include complex enums, traits, generics, matching, iterators, channels, and
threads.

Try it out in your browser (https://lukeworks.tech/tetanes-web)!
"""
section = "game"
assets = [
  [
    'target/dist/tetanes',
    '/usr/bin/',
    '755',
  ],
  [
    "README.md",
    "usr/share/doc/tetanes/README",
    "644",
  ],
]
