[package]
name = "pix-engine"
version = "0.1.0"
license = "GNU"
description = "A simple, cross-platform graphics/UI engine framework with a minimal interface."
readme = "README.md"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
edition = "2018"

[lib]
name = "pix_engine"
path = "src/lib.rs"

[dependencies]
png = "0.15.0"
rand = "0.7.1"
sdl2 = { version = "0.32.2", default-features = false, features = ["unsafe_textures"], optional = true }

[features]
default = ["sdl2-driver"]
sdl2-driver = ["sdl2"]
wasm-driver = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2.51"
optional = true
